--- a/style.css
+++ b/style.css
@@ -67,3 +67,17 @@ body {
   transition: transform 0.3s ease-in-out;
   cursor: pointer;
 }
+.blue {
+  background-color: rgb(15, 39, 179);
+  color: #fff;
+}
+
+.yellow {
+  background-color: rgb(223, 216, 21);
+  color: black;
+}
+
+.red {
+  background-color: red;
+  color: #fff;
+}
